<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/dressCode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_layout_height"
        android:paddingVertical="@dimen/title_vertical_padding"
        android:text="@string/dressCode"
        android:textAlignment="center"
        android:textColor="@color/dressCode"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dressCodeCaption"
        android:layout_width="411dp"
        android:layout_height="39dp"
        android:paddingVertical="@dimen/caption_vertical_padding"
        android:text="@string/dressCodeCaption"
        android:textAlignment="center"
        android:textColor="@color/dressCodeCaption"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="272dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/height">

            <ImageView
                android:id="@+id/outerwear"
                android:layout_width="136dp"
                android:layout_height="@dimen/height" />

            <ImageView
                android:id="@+id/top"
                android:layout_width="136dp"
                android:layout_height="@dimen/height" />

            <ImageView
                android:id="@+id/dresses"
                android:layout_width="136dp"
                android:layout_height="@dimen/height" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/height">

            <ImageView
                android:id="@+id/shoes"
                android:layout_width="@dimen/height"
                android:layout_height="@dimen/height" />

            <ImageView
                android:id="@+id/bottom"
                android:layout_width="@dimen/height"
                android:layout_height="@dimen/height" />

            <ImageView
                android:id="@+id/accessories"
                android:layout_width="@dimen/height"
                android:layout_height="@dimen/height" />

        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <SeekBar
        android:id="@+id/rateBar"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Spinner
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="82dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/selBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selBtn" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>